--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <h2>Minh Tran</h2>
+            <p>Brisbane, Australia</p>
+            <a href="https://www.linkedin.com/in/minh-ngoc-1309/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/MinhTran_GK"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/minhtran1309"><i class="fab fa-github"></i></a>
+
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
+            <p>I am a PhD candidate at University of Queensland (UQ) where I study and research about bioinformatic from 2019 until now. </p>
+            <p>I achieved Bachelor of Computer Science from National Economic Universiy, Vietnam (2015) and Master in Electronic Engineering (major in Neural Network and Machine Learning) at Myongji University, South Korea (2018). Before joining UQ, I have industry experience in both startup and corporate. </p>
             <h2>Experience</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
 
