complete about section

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
+            <p>Welcome to my personal website! </p>
             <p>I am a PhD candidate at University of Queensland (UQ) where I study and research about bioinformatic from 2019 until now. </p>
             <p>I achieved Bachelor of Computer Science from National Economic Universiy, Vietnam (2015) and Master in Electronic Engineering (major in Neural Network and Machine Learning) at Myongji University, South Korea (2018). Before joining UQ, I have industry experience in both startup and corporate. </p>
+            <p>From 30 May 2022, I will start to post weekly blog about me dumb down science. The topics I could cover including computer technology, sports, bioscience and figure interpretation with level confidence sorted in descending order.</p>
             <h2>Experience</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
 
