--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
+    <title>Minh's Journal</title>
 </head>
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
+            
+            <div style="height:200px;width:200px">
+            <img src="img/avatar.jpg" alt="Avatar" style="width:100%; height:100%;float: center; margin: 0px 0px 10px 500px;">
+            </div>
+            <div> 
             <h2>Minh Tran</h2>
             <p>Brisbane, Australia</p>
             <a href="https://www.linkedin.com/in/minh-ngoc-1309/"><i class="fab fa-linkedin"></i></a>
             <a href="https://twitter.com/MinhTran_GK"><i class="fab fa-twitter"></i></a>
             <a href="https://github.com/minhtran1309"><i class="fab fa-github"></i></a>
-
+            </div>
         </div>
         <div class="section-2">
             <h2>About</h2>
