update boxfit for image skew

--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
     <div class="grid-2">
         <div class="section-1">
             
-            <div style="height:200px;width:200px">
-            <img src="img/avatar.jpg" alt="Avatar" style="width:100%; height:100%;float: center; margin: 0px 0px 10px 500px;">
-            </div>
-            <div> 
+            <img src="img/avatar.jpg" alt="Avatar" style="width:50%; height:75%"> 
+            </img>
             <h2>Minh Tran</h2>
             <p>Brisbane, Australia</p>
             <a href="https://www.linkedin.com/in/minh-ngoc-1309/"><i class="fab fa-linkedin"></i></a>
             <a href="https://twitter.com/MinhTran_GK"><i class="fab fa-twitter"></i></a>
             <a href="https://github.com/minhtran1309"><i class="fab fa-github"></i></a>
-            </div>
+
         </div>
         <div class="section-2">
             <h2>About</h2>
